fix image width overflow at articel2

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,12 @@ $font-stack: -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", "Helvetica 
 @import "pages/contacts";
 
 
-
+.article {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
 
 body, html {
   height: 100%;
